[package]
name = "rust-arduino-love-o-meter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
ufmt_float = "0.1.0"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
branch = "main"
features = ["arduino-uno"]

[dependencies.avr-device]
version = "0.3"

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
